# AI-Assisted-Log-Triage-CLI

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: docker-compose.yml  loki-config.yml
deploy/grafana/dashboards/: loglens.json
deploy/grafana/provisioning/dashboards/: dashboards.yml
deploy/grafana/provisioning/datasources/: loki.yml
sample_logs/: api_server.jsonl
src/loglens/: __init__.py  anomaly.py  cli.py  clustering.py  correlation.py  diff.py  drain.py  incident.py  live.py  parser.py  redact.py  report.py  scoring.py  semantic.py  severity_infer.py  summarize.py
src/loglens/exporters/: __init__.py  loki.py  webhook.py
src/loglens/llm/: __init__.py  base.py  factory.py
src/loglens/llm/providers/: __init__.py  anthropic.py  gemini.py  ollama.py  openai_compat.py
src/loglens/web/: __init__.py  app.py  simulator.py
src/loglens/web/static/: app.css  app.js
src/loglens/web/templates/: index.html
tests/: test_anomaly.py  test_baseline.py  test_cli.py  test_clustering.py  test_correlation.py  test_diff.py  test_drain.py  test_formats.py  test_incident.py  test_live.py  test_loki.py  test_output.py  test_parser.py  test_providers.py  test_redact.py  test_report.py  test_scoring.py  test_semantic.py  test_severity_infer.py  test_simulator.py  test_web.py
