[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loglens"
version = "0.1.0"
description = "AI-assisted log triage for operational and incident diagnostics"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "loglens contributors" }]
keywords = ["logs", "incident", "triage", "llm", "observability", "sre"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "black>=24.0",
    "mypy>=1.10",
    "bandit>=1.7",
]
# Optional heavyweight ML extras. Core loglens never imports these; the smarter
# analytics fall back to pure-Python implementations when they are absent.
ml = [
    "numpy>=1.26",
    "scikit-learn>=1.4",
]

[project.scripts]
loglens = "loglens.cli:app"

[project.urls]
Homepage = "https://github.com/example/loglens"
Repository = "https://github.com/example/loglens"

[tool.hatch.build.targets.wheel]
packages = ["src/loglens"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/loglens"]
branch = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # line length is handled by black

[tool.ruff.lint.per-file-ignores]
# Typer relies on function calls (typer.Option/Argument) in argument defaults.
"src/loglens/cli.py" = ["B008"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.bandit]
# B101: asserts are used as internal invariants, not input validation.
skips = ["B101"]

[tool.mypy]
python_version = "3.11"
packages = ["loglens"]
mypy_path = "src"
ignore_missing_imports = true
warn_unused_ignores = false
check_untyped_defs = true
